--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,73 @@
 /* ini css */
-*,
-html {
-   
+
+.body {
+    background-image: url(../assets/DarkForest.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    margin: 0;
 }
 
-.celcius-container {
+.header-container {
     text-align: center;
-}
-
-.header-contaainer {
-
+    font-family: monospace;
+    color: white;
+    text-shadow: 2px 1px black;
+    padding: 10px;
+    margin-left: 60px;
+    margin-right: 60px;
 }
 
 .content-container {
-    border-radius: 30px;
-    backdrop-filter: blur(5px);
-    outline-style: solid;
-    outline-color: antiquewhite;
-    height: 310px;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    height: 450px;
     display: flow-root;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    background-color: rgba(2, 2, 2, 0.274);
+    margin-left: 50px;
+    margin-right: 50px;
+    transform: scale(1);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+.formula-container {
+    color: white;
+    text-align: center;
+    text-shadow: 2px 1px black;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    background-color: rgba(2, 2, 2, 0.274);
+    margin-left: 50px;
+    margin-right: 50px;
+    height: 600px;
 }
 
 .footer-container {
     border-radius: 5px;
-    display: flow-root;
     backdrop-filter: brightness(0.2);
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #232d45;
+    padding: 10px;
+    height: fit-content;
+    gap: 5px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    align-content: center;
+    margin: 0px;
+    padding: 0px;
+    color: white;
+    text-align: center;
+}
+
+.footer-profil {
+    display: flex;
+    gap: 5px;
+    align-items: center;
 }
 
 .result-container {
@@ -39,85 +82,64 @@ textarea {
     border: 2px solid #ccc;
     font-family: cursive;
     text-align: center;
-    font-size: 16px;
+    font-size: 20px;
     color: white;
     align-content: center;
 }
 
+textarea:hover {
+    border-style: inset;
+    backdrop-filter: brightness(0.8);
+    transition: .1s;
+}
+
+.celcius-container {
+    text-align: center;
+}
+
 .button {
-    background-color: #ffffff;
+    background-color: #c5c9b8;
     border: 1px solid #a2a2a2;
     border-radius: 5px;
-    height: 32px;
-    width: 80px;
-    box-shadow: 3px 3px #4d4d4d;
+    height: 38px;
+    width: 110px;
     font-family: fantasy;
     color: #2c2c2c;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    font-size: 16px;
 }
 
 .grenn:hover {
-    background-color: #7aff6e;
+    background-color: #6ef862;
     border: #f3fff2;
     color: rgb(23, 23, 23);
-    transition: .4s ease-in-out;
-    transition-delay: .3s;
-    border-radius: 8px;
-    box-shadow: 2px 2px#a2a2a2;
+    transition: .2s ease-in-out;
+    transition-delay: 0.1s;
+    border-radius: 10px;
+    box-shadow: 1px 2px#a2a2a2;
+    font-size: 17px;
 }
 
 .red:hover {
     background-color: #ff4e4e;
     border: #ffd6d6;
     color: rgb(23, 23, 23);
-    transition: .4s ease-in-out;
-    transition-delay: .3s;
-    border-radius: 8px;
-    box-shadow: 2px 2px#a2a2a2;
+    transition: .2s ease-in-out;
+    transition-delay: 0.1s;
+    border-radius: 10px;
+    box-shadow: 1px 2px#a2a2a2;
+    font-size: 17px;
 }
 
 .blue:hover {
     background-color: #52e3fd;
     border: #d2f8ff;
     color: rgb(23, 23, 23);
-    transition: .4s ease-in-out;
-    transition-delay: .3s;
-    border-radius: 8px;
-    box-shadow: 2px 2px#a2a2a2;
-}
-
-.h1 {
-    text-align: center;
-    font-family: monospace;
-    color: white;
-    text-shadow: 2px 1px black;
-}
-
-.h2 {
-    text-align: center;
-    font-family: monospace;
-    color: white;
-    text-shadow: 2px 1px black;
-}
-
-.h3 {
-    text-align: center;
-    font-family: monospace;
-    color: white;
-    text-shadow: 2px 1px black;
-}
-
-.h4 {
-    text-align: center;
-    font-family: monospace;
-    color: white;
-    text-shadow: 2px 1px black;
-}
-
-.p {
-    text-align: center;
-    text-shadow: 2px 1px black;
-    color: white;
-    font: caption;
+    transition: .2s ease-in-out;
+    transition-delay: 0.1s;
+    border-radius: 10px;
+    box-shadow: 1px 2px#a2a2a2;
+    font-size: 17px;
 }
 
 .subject-info {
@@ -126,21 +148,11 @@ textarea {
     font-family: math;
 }
 
-.body {
-    background-image: url(../assets/DarkForest.jpg);
-    background-position: center;
-    background-position-x: center;
-    height: 100vh;
-}
-
-.formula-container {
+.text-a {
     color: white;
 }
 
-.a-img {
-    align-items: center;
-    text-align: center;
-    text-shadow: 2px 1px black;
-    color: white;
-    font-family: monospace;
+.header-text {
+    padding: 25px;
+    font-family: system-ui;
 }
